--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="active"><a href="index.html"><span>Home</span></a></li>
-                      <li><a href="about-coach.html"><span>About Coach</span></a></li>
-                      <li><a href="typography.html"><span>Typography</span></a></li>
-                      <li><a href="contacts.html"><span>Contact Us</span></a></li>
+                      <li><a href="about-coach.html"><span>Sobre</span></a></li>
+                      <li><a href="typography.html"><span>Parcerias</span></a></li>
+                      <li><a href="contacts.html"><span>Contato</span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -84,12 +84,11 @@
                   <div class="container">
                     <div class="row justify-content-xl-center">
                       <div class="col-xl-12">
-                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">No Pain No Gain</div>
+                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">O Lugar Certo Para O Seu Treino</div>
                       </div>
                       <div class="col-xl-8 offset-top-10">
                         <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">
-                          Having a perfect body requires a lot of training. Nice-looking body and
-                          powerful organism are interconnected – and we can help you with both.
+                          Consulte nosso whatsapp e agende sua aula experimental.
                         </h5>
                         <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">get started</span></a></div>
                       </div>
