--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <!-- RD Navbar Top Panel-->
               <div class="rd-navbar-top-panel context-dark bg-danger">
                 <div class="left-side">
-                  <address class="contact-info text-left"><a href="tel:#"><span class="icon mdi mdi-cellphone-android novi-icon"></span><span class="text-middle">1-800-1324-567</span></a></address>
+                  <address class="contact-info text-left"><a href="tel:#"><span class="icon mdi mdi-cellphone-android novi-icon"></span><span class="text-middle">041 xxxxx-xxxx</span></a></address>
                 </div>
                 <div class="center">
-                  <address class="contact-info text-left"><a href="#"><span class="icon mdi mdi-map-marker-radius novi-icon"></span><span class="text-middle">2130 Fulton Street San Francisco, CA 94117-1080 USA</span></a></address>
+                  <address class="contact-info text-left"><a href="#"><span class="icon mdi mdi-map-marker-radius novi-icon"></span><span class="text-middle">Curitiba-PR / Rio Bonito </span></a></address>
                 </div>
                 <div class="right-side">
                   <ul class="list-inline list-inline-sm">
@@ -55,7 +55,7 @@
                 <!-- RD Navbar Top Panel Toggle-->
                 <button class="rd-navbar-top-panel-toggle" data-rd-navbar-toggle=".rd-navbar, .rd-navbar-top-panel"><span></span></button>
                 <!--Navbar Brand-->
-                <div class="rd-navbar-brand"><a href="index.html"><img width='173' height='30' src='images/logo.png' alt=''/></a></div>
+                <div class="rd-navbar-brand"><a href="index.html"><img width='173' height='30' src='imgs-muscle/1.png' alt=''/></a></div>
               </div>
               <div class="rd-navbar-menu-wrap">
                 <div class="rd-navbar-nav-wrap">
@@ -103,11 +103,11 @@
                   <div class="container">
                     <div class="row justify-content-xl-center">
                       <div class="col-xl-12">
-                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">never give up</div>
+                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">Texto2</div>
                       </div>
                       <div class="col-xl-8 offset-top-10">
-                        <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">Every bodybuilder requires a lot of dedication and effort to shape his/her body into something to be proud of. We can give you everything you need for it.</h5>
-                        <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">get started</span></a></div>
+                        <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">Espaço para texto</h5>
+                        <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">Saiba Mais</span></a></div>
                       </div>
                     </div>
                   </div>
@@ -120,11 +120,11 @@
                   <div class="container">
                     <div class="row justify-content-xl-center">
                       <div class="col-xl-12">
-                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">You can go the distance</div>
+                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">Conte conosco para ter o melhor desempenho durante seu treino</div>
                       </div>
                       <div class="col-xl-8 offset-top-10">
-                        <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">Clients of our gym receive not only necessary equipment for their workouts but also friendly support in achieving their number one training goal.</h5>
-                        <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">get started</span></a></div>
+                        <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">Clientes Muscle tem descontos em lojas parceiras </h5>
+                        <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">Saiba Mais</span></a></div>
                       </div>
                     </div>
                   </div>
@@ -140,33 +140,33 @@
       <!--Welcome-->
       <section class="section-98 section-md-110 novi-background" data-preset='{"title":"Content block 1","category":"content","id":"content-block-1"}'>
         <div class="container">
-          <h1>Welcome</h1>
+          <h1>Boas Vindas</h1>
           <hr class="divider bg-red">
           <div class="row justify-content-sm-center offset-top-66">
             <div class="col-xl-8">
-              <p>Welcome to  Intense Gym! We hope that you will appreciate our services and opportunities we offer our loyal and potential customers. Here are some of them:</p>
+              <p>Espaço para texto</p>
             </div>
           </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-account-multiple"></span>
-                <h4 class="text-danger offset-top-20">Qualified Coaches</h4>
-                <p>Our coaches have years of experience in various types of fitness and sports.</p>
+                <h4 class="text-danger offset-top-20">Profissionais Qualificados</h4>
+                <p>Espaço para texto</p>
               </div>
             </div>
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-xs icon-dark-filled mdi mdi-thumb-up"></span>
-                <h4 class="text-danger offset-top-20">Individual Approach</h4>
-                <p>Every client of Intense has a personalized program of training and nutrition.</p>
+                <h4 class="text-danger offset-top-20">Ambiente</h4>
+                <p>Amplo Espaço e variedades de máquinas para o seu treino ficar completo</p>
               </div>
             </div>
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-dumbbell"></span>
-                <h4 class="text-danger offset-top-20">Modern Fitness Equipment</h4>
-                <p>We cooperate with leading fitness equipment suppliers to give you the superior results.</p>
+                <h4 class="text-danger offset-top-20">Texto3</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo similique sequi sunt fuga ipsa itaque eum voluptatibus reiciendis maiores beatae quaerat suscipit, <br><br>accusantium soluta praesentium esse tenetur sit cupiditate unde.</p>
               </div>
             </div>
           </div>
@@ -180,9 +180,9 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/home-01-480x480.jpg" alt=""/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Bodybuilding</h4>
+                  <h4 class="thumbnail-terry-title">Divulgações</h4>
                 </div>
-                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">free first lesson</a>
+                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
             </figure>
           </div>
