--- a/index.html
+++ b/index.html
@@ -53,76 +53,15 @@
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
                       <li class="active"><a href="index.html"><span>Home</span></a></li>
-                      <li><a href="about-coach.html"><span>Sobre</span></a></li>
-                      <li><a href="typography.html"><span>Parcerias</span></a></li>
-                      <li><a href="contacts.html"><span>Contato</span></a></li>
+                      <li><a href="#about-coach.html"><span>Sobre</span></a></li>
+                      <li><a href="#typography.html"><span>Parcerias</span></a></li>
+                      <li><a href="#contacts.html="><span>Contato</span></a></li>
                     </ul>
                   </div>
                 </div>
               </div>
             </div>
           </nav>
-        </div>
-        <!--Swiper-->
-        <div class="swiper-container swiper-slider" data-loop="false" data-autoplay="5500" data-dragable="false">
-          <div class="swiper-wrapper text-center">
-            <div class="swiper-slide" data-slide-bg="images/background-01-1920x750.jpg" data-preview-bg="images/background-01-1920x750.jpg">
-              <div class="swiper-caption swiper-parallax" data-speed="0.5" data-fade="true">
-                <div class="swiper-slide-caption">
-                  <div class="container">
-                    <div class="row justify-content-xl-center">
-                      <div class="col-xl-12">
-                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">O Lugar Certo Para O Seu Treino</div>
-                      </div>
-                      <div class="col-xl-8 offset-top-10">
-                        <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">
-                          Consulte nosso whatsapp e agende sua aula experimental.
-                        </h5>
-                        <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">get started</span></a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide" data-slide-bg="images/background-02-1920x750.jpg" data-preview-bg="images/background-02-1920x750.jpg">
-              <div class="swiper-caption swiper-parallax" data-speed="0.5" data-fade="true">
-                <div class="swiper-slide-caption">
-                  <div class="container">
-                    <div class="row justify-content-xl-center">
-                      <div class="col-xl-12">
-                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">Texto2</div>
-                      </div>
-                      <div class="col-xl-8 offset-top-10">
-                        <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">Espaço para texto</h5>
-                        <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">Saiba Mais</span></a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide" data-slide-bg="images/background-03-1920x750.jpg" data-preview-bg="images/background-03-1920x750.jpg">
-              <div class="swiper-caption swiper-parallax" data-speed="0.5" data-fade="true">
-                <div class="swiper-slide-caption">
-                  <div class="container">
-                    <div class="row justify-content-xl-center">
-                      <div class="col-xl-12">
-                        <div class="text-extra-big font-weight-bold font-italic text-uppercase" data-caption-animate="fadeInUp" data-caption-delay="300">Conte conosco para ter o melhor desempenho durante seu treino</div>
-                      </div>
-                      <div class="col-xl-8 offset-top-10">
-                        <h5 class="hidden d-sm-block text-light" data-caption-animate="fadeInUp" data-caption-delay="500">Clientes Muscle tem descontos em lojas parceiras </h5>
-                        <div class="offset-top-20 offset-sm-top-50"><a class="btn btn-danger btn-anis-effect" href="#" data-waypoint-to="#welcome" data-caption-animate="fadeInUp" data-caption-delay="800"><span class="btn-text">Saiba Mais</span></a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-button swiper-button-prev swiper-parallax mdi mdi-chevron-left"></div>
-          <div class="swiper-button swiper-button-next swiper-parallax mdi mdi-chevron-right"></div>
-          <div class="swiper-pagination"></div>
         </div>
       </header>
       <!--Welcome-->
@@ -165,7 +104,7 @@
         <div class="owl-carousel owl-carousel-default d-lg-none-owl-dots veil-owl-nav d-lg-owl-nav" data-items="1" data-sm-items="2" data-lg-items="3" data-xl-items="4" data-nav="true" data-dots="true" data-nav-class="[&quot;owl-prev mdi mdi-chevron-left&quot;, &quot;owl-next mdi mdi-chevron-right&quot;]">
           <div>
             <!-- Thumbnail Terry-->
-            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/home-01-480x480.jpg" alt=""/></a>
+            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/1.png" alt=""/></a>
               <figcaption>
                 <div>
                   <h4 class="thumbnail-terry-title">Divulgações</h4>
@@ -176,7 +115,7 @@
           </div>
           <div>
             <!-- Thumbnail Terry-->
-            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/home-02-480x480.jpg" alt=""/></a>
+            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/2.png" alt=""/></a>
               <figcaption>
                 <div>
                   <h4 class="thumbnail-terry-title">Fitness</h4>
@@ -187,7 +126,7 @@
           </div>
           <div>
             <!-- Thumbnail Terry-->
-            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/home-03-480x480.jpg" alt=""/></a>
+            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/3.png" alt=""/></a>
               <figcaption>
                 <div>
                   <h4 class="thumbnail-terry-title">Crossfit</h4>
@@ -198,7 +137,7 @@
           </div>
           <div>
             <!-- Thumbnail Terry-->
-            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/home-04-480x480.jpg" alt=""/></a>
+            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/4.png"/></a>
               <figcaption>
                 <div>
                   <h4 class="thumbnail-terry-title">Circle Studio</h4>
@@ -209,7 +148,7 @@
           </div>
           <div>
             <!-- Thumbnail Terry-->
-            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/about-01-480x480.jpg" alt=""/></a>
+            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/5.png" alt=""/></a>
               <figcaption>
                 <div>
                   <h4 class="thumbnail-terry-title">Strength Training</h4>
@@ -220,7 +159,7 @@
           </div>
           <div>
             <!-- Thumbnail Terry-->
-            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="images/about-02-480x480.jpg" alt=""/></a>
+            <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/6.png" alt=""/></a>
               <figcaption>
                 <div>
                   <h4 class="thumbnail-terry-title">Yoga</h4>
@@ -234,15 +173,15 @@
       <!-- Coaches-->
       <section class="section-98 section-md-110 novi-background" data-preset='{"title":"Team","category":"content, team","reload":false,"id":"team"}'>
         <div class="container">
-          <h1>Coaches</h1>
+          <h1>Profissionais</h1>
           <hr class="divider bg-danger">
           <div class="row justify-content-sm-center offset-top-66">
             <div class="col-md-10 col-xl-12">
               <div class="row">
                 <div class="col-md-6 col-xl-3">
                   <!-- Box Member-->
-                  <div class="box-member"><img class="img-fluid" src="images/user-ryan-jackson-270x270.jpg" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Ryan Jackson</a> <small class="text-danger">CrossFit</small>
+                  <div class="box-member"><img class="img-fluid" src="imgs-muscle/kayo-info.png" alt=""/>
+                    <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholli</a> <small class="text-danger">Profissional</small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -254,12 +193,11 @@
                       </div>
                     </div>
                   </div>
-                  <p class="offset-xl-top-0 text-muted">He has more than 10 years of experience in CrossFit and professional athletics.</p>
                 </div>
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-md-top-0 offset-xl-top-0">
                   <!-- Box Member-->
                   <div class="box-member"><img class="img-fluid" src="images/user-emily-perkins-270x270.jpg" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Emily Perkins</a> <small class="text-danger">Fitness</small>
+                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Emily Perkins</a> <small class="text-danger">Tenha uma rotina saudável</small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -271,7 +209,7 @@
                       </div>
                     </div>
                   </div>
-                  <p class="offset-xl-top-0 text-muted">Emily can teach you all peculiarities of fitness and aerobics in a group or individually.</p>
+                  <p class="offset-xl-top-0 text-muted">Espaço para texto</p>
                 </div>
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
                   <!-- Box Member-->
