--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="col-md-6 col-xl-3">
                   <!-- Box Member-->
                   <div class="box-member"><img class="img-fluid" src="imgs-muscle/kayo-info.png" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholli</a> <small class="text-danger">Profissional</small>
+                    <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholi</a> <small class="text-danger">Profissional</small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -196,8 +196,8 @@
                 </div>
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-md-top-0 offset-xl-top-0">
                   <!-- Box Member-->
-                  <div class="box-member"><img class="img-fluid" src="images/user-emily-perkins-270x270.jpg" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Emily Perkins</a> <small class="text-danger">Tenha uma rotina saudável</small>
+                  <div class="box-member"><img class="img-fluid" src="imgs-muscle/alan-info.png" alt=""/>
+                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Allan Zeider</a> <small class="text-danger">Profissional</small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -213,8 +213,8 @@
                 </div>
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
                   <!-- Box Member-->
-                  <div class="box-member"><img class="img-fluid" src="images/user-samantha-ruiz-270x270.jpg" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Samantha Ruiz</a> <small class="text-danger">Yoga</small>
+                  <div class="box-member"><img class="img-fluid" src="imgs-muscle/eduardo-info.png" alt=""/>
+                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Eduardo </a> <small class="text-danger">Estudante Ed. Física</small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
