--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
               <p>Espaço para texto</p>
             </div>
           </div>
+          <div class="video-container">
+            <div class="video-frame">
+              <iframe 
+                src="" 
+                title="Example Video" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
+            </div>
+            <article class="description">
+              <h2>Video Title</h2>
+              <p>This is a description of the video. Hover over the container to see a smooth animation effect!</p>
+            </article>
+          </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
