--- a/index.html
+++ b/index.html
@@ -71,13 +71,12 @@
           <hr class="divider bg-red">
           <div class="row justify-content-sm-center offset-top-66">
             <div class="col-xl-8">
-              <p>Espaço para texto</p>
             </div>
           </div>
           <div class="video-container">
             <div class="video-frame">
               <iframe 
-                src="" 
+                src="mp4-muscle/apresentação-gym.mp4" 
                 title="Example Video" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -85,8 +84,8 @@
               </iframe>
             </div>
             <article class="description">
-              <h2>Video Title</h2>
-              <p>This is a description of the video. Hover over the container to see a smooth animation effect!</p>
+              <h2>Nosso Ambiente</h2>
+              <p>Espaço para descrição do ambiente e informações importantes</p>
             </article>
           </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
