--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/1.png" alt=""/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Divulgações</h4>
+                  <h4 class="thumbnail-terry-title"></h4>
                 </div>
                 <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
@@ -132,9 +132,9 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/2.png" alt=""/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Fitness</h4>
+                  <h4 class="thumbnail-terry-title"></h4>
                 </div>
-                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">free first lesson</a>
+                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
             </figure>
           </div>
@@ -143,9 +143,9 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/3.png" alt=""/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Crossfit</h4>
+                  <h4 class="thumbnail-terry-title"></h4>
                 </div>
-                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">free first lesson</a>
+                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
             </figure>
           </div>
@@ -154,9 +154,9 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/4.png"/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Circle Studio</h4>
+                  <h4 class="thumbnail-terry-title">Circle St</h4>
                 </div>
-                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">free first lesson</a>
+                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
             </figure>
           </div>
@@ -165,9 +165,9 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/5.png" alt=""/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Strength Training</h4>
+                  <h4 class="thumbnail-terry-title"></h4>
                 </div>
-                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">free first lesson</a>
+                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
             </figure>
           </div>
@@ -176,9 +176,9 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/6.png" alt=""/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Yoga</h4>
+                  <h4 class="thumbnail-terry-title"></h4>
                 </div>
-                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">free first lesson</a>
+                <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
             </figure>
           </div>
@@ -309,45 +309,22 @@
               <div class="row justify-content-sm-center">
                 <div class="col-sm-10 col-md-3 text-left order-md-4 col-md-10 col-xl-3 offset-md-top-50 offset-xl-top-0 order-xl-2">
                   <!-- Twitter Feed-->
-                  <p class="text-uppercase text-spacing-60 font-weight-bold text-center text-xl-left">Twitter Feed</p>
                   <div class="offset-top-20">
-                          <div class="twitter" data-twitter-username="templatemonster" data-twitter-date-hours=" hours ago" data-twitter-date-minutes=" minutes ago">
-                            <div class="twitter-sm" data-twitter-type="tweet">
-                              <div class="twitter-date text-dark small"><span class="icon icon-xxs mdi mdi-twitter text-middle"></span> <span class="text-middle" data-date="text"></span>
-                              </div>
-                              <div class="twitter-text" data-tweet="text"></div>
-                              <div class="twitter-name font-weight-bold big" data-screen_name="text"></div>
-                            </div>
-                            <div class="twitter-sm" data-twitter-type="tweet">
-                              <div class="twitter-date text-dark small"><span class="icon icon-xxs mdi mdi-twitter text-middle"></span> <span class="text-middle" data-date="text"></span>
-                              </div>
-                              <div class="twitter-text" data-tweet="text"></div>
-                              <div class="twitter-name font-weight-bold big" data-screen_name="text"></div>
-                            </div>
-                          </div>
-                  </div>
-                </div>
-                <div class="col-sm-10 col-md-3 offset-top-66 order-md-3 col-md-10 col-xl-2 offset-xl-top-0 order-xl-3">
-                  <!-- Flickr Feed-->
-                  <p class="text-uppercase text-spacing-60 font-weight-bold">Gallery</p>
-                  <div class="offset-top-24">
-                          <div class="group-xs flickr widget-flickrfeed" data-lightgallery="group" data-flickr-tags="tm58888_landscapes"><a class="flickr-item thumbnail-classic" data-lightgallery="item" href="" data-image_c="href" data-size="800x800" data-type="flickr-item"><img width="82" height="82" data-title="alt" src="images/_blank.png" alt="" data-image_q="src"></a><a class="flickr-item thumbnail-classic" data-lightgallery="item" href="" data-image_c="href" data-size="800x800" data-type="flickr-item"><img width="82" height="82" data-title="alt" src="images/_blank.png" alt="" data-image_q="src"></a><a class="flickr-item thumbnail-classic" data-lightgallery="item" href="" data-image_c="href" data-size="800x800" data-type="flickr-item"><img width="82" height="82" data-title="alt" src="images/_blank.png" alt="" data-image_q="src"></a><a class="flickr-item thumbnail-classic" data-lightgallery="item" href="" data-image_c="href" data-size="800x800" data-type="flickr-item"><img width="82" height="82" data-title="alt" src="images/_blank.png" alt="" data-image_q="src"></a>
-                          </div>
+                          
                   </div>
                 </div>
                 <div class="col-sm-10 col-md-3 offset-top-66 order-md-2 offset-md-top-0 col-md-6 col-xl-4 order-xl-4">
                   <div class="inset-xl-left-20">
-                    <p class="text-uppercase text-spacing-60 font-weight-bold">Newsletter</p>
+                    <p class="text-uppercase text-spacing-60 font-weight-bold">Novidades</p>
                     <p class="offset-top-20 text-left">
-                      Keep up with our always upcoming  news and updates. Enter your e-mail and
-                      subscribe to our newsletter.
+                      Mantenha se atualizado com as novidades da Muscle Factory
                     </p>
                     <div class="offset-top-30">
                             <form class="rd-mailform" data-form-output="form-subscribe-footer" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
                               <div class="form-group">
                                 <div class="input-group input-group-sm"><span class="input-group-prepend"><span class="input-group-text input-group-icon"><span class="mdi mdi-email novi-icon"></span></span></span>
-                                  <input class="form-control" placeholder="Type your E-Mail" type="email" name="email" data-constraints="@Required @Email"><span class="input-group-append">
-                                    <button class="btn btn-sm btn-danger" type="submit">Subscribe</button></span>
+                                  <input class="form-control" placeholder="Insira seu email" type="email" name="email" data-constraints="@Required @Email"><span class="input-group-append">
+                                    <button class="btn btn-sm btn-danger" type="submit">Inscreva-se</button></span>
                                 </div>
                               </div>
                               <div class="form-output" id="form-subscribe-footer"></div>
@@ -357,7 +334,8 @@
                 </div>
                 <div class="col-sm-10 col-md-3 offset-top-66 order-md-1 offset-md-top-0 col-md-6 col-xl-3 order-xl-1">
                   <!-- Footer brand-->
-                  <div class="footer-brand"><a href="index.html"><img width='173' height='30' src='images/logo.png' alt=''/></a></div>
+                  <p class="text-uppercase text-spacing-60 font-weight-bold text-center text-xl-left">Nos acompanhe em nossas redes sociais</p>
+
                   <div class="offset-top-50 text-sm-center text-xl-left">
                           <ul class="list-inline">
                             <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
@@ -366,8 +344,7 @@
                             <li class="list-inline-item"><a class="novi-icon icon fa fa-linkedin icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                           </ul>
                   </div>
-                  <p class="text-darker offset-top-20">Intense Gym &copy; <span id="copyright-year"></span> .
-                    Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com">TemplateMonster</a>
+                  <p class="text-darker offset-top-20">Muscle Factory &copy; <span id="copyright-year"></span>
                   </p>
                 </div>
               </div>
