--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!--Welcome-->
       <section class="section-98 section-md-110 novi-background" data-preset='{"title":"Content block 1","category":"content","id":"content-block-1"}'>
         <div class="container">
-          <h1>Boas Vindas</h1>
+          <h1 class="home">Boas Vindas</h1>
           <hr class="divider bg-red">
           <div class="row justify-content-sm-center offset-top-66">
             <div class="col-xl-8">
@@ -240,12 +240,12 @@
                       </div>
                     </div>
                   </div>
-                  <p class="offset-xl-top-0 text-muted">Our leading yoga coach, Samantha, will help you reach full harmony with your body.</p>
+                  <p class="offset-xl-top-0 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quis officiis natus, voluptatem itaque cupiditate voluptates pariatur praesentium doloribus deserunt ipsam dolor.<br><br> Autem quas soluta explicabo laborum, magni nostrum ipsam.</p>
                 </div>
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
                   <!-- Box Member-->
                   <div class="box-member"><img class="img-fluid" src="images/user-austin-ortiz-270x270.jpg" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Austin Ortiz</a> <small class="text-danger">Bodybuilding</small>
+                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Nome </a> <small class="text-danger">Profissão</small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -257,9 +257,9 @@
                       </div>
                     </div>
                   </div>
-                  <p class="offset-xl-top-0 text-muted">Austin is not only our most called-for coach, but also a winner of many championships.</p>
+                  <p class="offset-xl-top-0 text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis perferendis labore quod ut! Nostrum nesciunt illum, <br><br> iste sed laborum consectetur tenetur consequuntur atque quod! Odio officia quibusdam eos enim commodi.</p>
                 </div>
-              </div><a class="offset-top-66 btn btn-danger" href="about-coach.html">view all coaches</a>
+              </div><a class="offset-top-66 btn btn-danger" href="#about-coach.html">Nossa Equipe</a>
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
           <div class="parallax-content">
             <div class="bg-overlay-gray-darkest context-dark">
               <div class="container section-98 section-md-110">
-                <h1>Testimonials</h1>
+                <h1>Parceiros Muscle Factory</h1>
                 <hr class="divider bg-white">
                 <div class="row justify-content-sm-center">
                   <div class="col-md-8">
@@ -278,20 +278,20 @@
                     <div class="owl-carousel owl-carousel-testimonials-2" data-items="1" data-nav="true" data-dots="false" data-nav-class="[&quot;owl-prev mdi mdi-chevron-left&quot;, &quot;owl-next mdi mdi-chevron-right&quot;]">
                       <div>
                         <blockquote class="quote quote-slider-3">
-                          <p class="quote-body">I came here to acquire the shape of my body I had half a year ago. I was quite surprised with a range of services they offered me at Intense Gym. Moreover, you can benefit from their group training</p><img class="quote-img rounded-circle" width="80" height="80" src="images/user-alisa-milano-80x80.jpg" alt="Alice Wilson"/>
+                          <p class="quote-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, veniam facilis? Beatae quod nemo cumque quisquam ratione aspernatur deleniti exercitationem ipsam modi, <br><br>quaerat velit debitis at natus, esse pariatur molestias.</p><img class="quote-img rounded-circle" width="80" height="80" src="imgs-muscle/kayo-muscle.jpg" alt="Kayo Romanholi"/>
                           <p class="font-weight-bold quote-author">
-                            <cite class="text-normal">Alice Wilson</cite>
+                            <cite class="text-normal">Kayo Romanholi</cite>
                           </p>
-                          <p class="quote-desc text-gray">Regular Client</p>
+                          <p class="quote-desc text-gray">Profissional de ED. Física e Mestre faixa preta em Musculação</p>
                         </blockquote>
                       </div>
                       <div>
                         <blockquote class="quote quote-slider-3">
-                          <p class="quote-body">I have had the phenomenal pleasure of working out with Intense Gym coaches as a client and friend throughout the last year. Their magnetic personalities ensure that a friendship will inevitably develop throughout the training course.</p><img class="quote-img rounded-circle" width="80" height="80" src="images/user-july-mao-80x80.jpg" alt="Julie Smith"/>
+                          <p class="quote-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia magni enim, iste laborum sapiente maiores doloribus reiciendis nobis eos, <br><br> quod quas corrupti non. Impedit est ex quis inventore exercitationem dolorem.</p><img class="quote-img rounded-circle" width="80" height="80" src="imgs-muscle/alan-muscle.jpg" alt="Alan Zeider"/>
                           <p class="font-weight-bold quote-author">
-                            <cite class="text-normal">Julie Smith</cite>
+                            <cite class="text-normal">Alan Zeider</cite>
                           </p>
-                          <p class="quote-desc text-gray">Regular Client</p>
+                          <p class="quote-desc text-gray">Professor de Ed. Física e Instrutor</p>
                         </blockquote>
                       </div>
                     </div>
