--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <figure class="thumbnail-terry"><a href="#"><img width="480" height="480" src="imgs-muscle/4.png"/></a>
               <figcaption>
                 <div>
-                  <h4 class="thumbnail-terry-title">Circle St</h4>
+                  <h4 class="thumbnail-terry-title"></h4>
                 </div>
                 <p class="thumbnail-terry-desc offset-top-0"></p><a class="btn offset-top-10 offset-lg-top-0 btn-danger" href="#">Saiba Mais</a>
               </figcaption>
