--- a/index.html
+++ b/index.html
@@ -93,21 +93,22 @@
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-account-multiple"></span>
                 <h4 class="text-danger offset-top-20">Profissionais Qualificados</h4>
-                <p>Espaço para texto</p>
+                <p>
+                  "Encontre especialistas experientes e preparados para atender às suas necessidades com excelência."</p>
               </div>
             </div>
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-xs icon-dark-filled mdi mdi-thumb-up"></span>
                 <h4 class="text-danger offset-top-20">Ambiente</h4>
-                <p>Amplo Espaço e variedades de máquinas para o seu treino ficar completo</p>
+                <p>Amplo Espaço e variedades de máquinas para o seu treino ficar completo <br><br> "Academia espaçosa com 300 m², equipada com diversas máquinas para seu treino ser completo e eficiente."</p>
               </div>
             </div>
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-dumbbell"></span>
-                <h4 class="text-danger offset-top-20">Texto3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo similique sequi sunt fuga ipsa itaque eum voluptatibus reiciendis maiores beatae quaerat suscipit, <br><br>accusantium soluta praesentium esse tenetur sit cupiditate unde.</p>
+                <h4 class="text-danger offset-top-20">Equipamentos</h4>
+                <p>????</p>
               </div>
             </div>
           </div>
