--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <article class="description">
               <h2>Nosso Ambiente</h2>
-              <p>Espaço para descrição do ambiente e informações importantes</p>
+              <p class="ambiente">Espaço para descrição do ambiente e informações importantes</p>
             </article>
           </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
@@ -93,7 +93,7 @@
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-account-multiple"></span>
                 <h4 class="text-danger offset-top-20">Profissionais Qualificados</h4>
-                <p>
+                <p class="ambiente">
                   "Encontre especialistas experientes e preparados para atender às suas necessidades com excelência."</p>
               </div>
             </div>
@@ -101,14 +101,14 @@
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-xs icon-dark-filled mdi mdi-thumb-up"></span>
                 <h4 class="text-danger offset-top-20">Ambiente</h4>
-                <p>Amplo Espaço e variedades de máquinas para o seu treino ficar completo <br><br> "Academia espaçosa com 300 m², equipada com diversas máquinas para seu treino ser completo e eficiente."</p>
+                <p class="ambiente">Amplo Espaço e variedades de máquinas para o seu treino ficar completo <br><br> "Academia espaçosa com 300 m², equipada com diversas máquinas para seu treino ser completo e eficiente."</p>
               </div>
             </div>
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-dumbbell"></span>
                 <h4 class="text-danger offset-top-20">Equipamentos</h4>
-                <p>????</p>
+                <p class="ambiente">"Conte com equipamentos de academia de alta qualidade para tornar seus treinos completos e eficientes. Nossas máquinas e acessórios são projetados para atender a todos os níveis de condicionamento físico, desde iniciantes até atletas avançados. Realize exercícios variados e otimize seu desempenho com segurança e conforto. <br><br> Nosso espaço é equipado para oferecer o suporte ideal ao seu progresso. Transforme seus objetivos em realidade com as melhores ferramentas para o seu treino!"</p>
               </div>
             </div>
           </div>
