--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="col-md-6 col-xl-3">
                   <!-- Box Member-->
                   <div class="box-member"><img class="img-fluid" src="imgs-muscle/kayo-info.png" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholi</a> <small class="text-danger">Profissional</small>
+                    <h5 class="font-weight-bold offset-top-20"><a href="#about-coach.html">Kayo Romanholi</a> <small class="text-danger"></small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -212,7 +212,7 @@
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-md-top-0 offset-xl-top-0">
                   <!-- Box Member-->
                   <div class="box-member"><img class="img-fluid" src="imgs-muscle/alan-info.png" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Allan Zeider</a> <small class="text-danger">Profissional</small>
+                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Allan Zeider</a> <small class="text-danger"></small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -229,7 +229,7 @@
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
                   <!-- Box Member-->
                   <div class="box-member"><img class="img-fluid" src="imgs-muscle/eduardo-info.png" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Eduardo </a> <small class="text-danger">Estudante Ed. Física</small>
+                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Eduardo </a> <small class="text-danger"></small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
@@ -246,7 +246,7 @@
                 <div class="col-md-6 col-xl-3 offset-top-66 offset-xl-top-0">
                   <!-- Box Member-->
                   <div class="box-member"><img class="img-fluid" src="images/user-austin-ortiz-270x270.jpg" alt=""/>
-                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Nome </a> <small class="text-danger">Profissão</small>
+                    <h5 class="font-weight-bold offset-top-20"><a href="about-coach.html">Funcionario 4</a> <small class="text-danger"></small>
                     </h5>
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
