--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="right-side">
                   <ul class="list-inline list-inline-sm">
                     <li class="list-inline-item"><a class="novi-icon fa fa-facebook" href="#"></a></li>
-                    <li class="list-inline-item"><a class="novi-icon fa fa-twitter" href="#"></a></li>
+                    <li class="list-inline-item"><a class="fa-brands fa-instagram" href="#"></a></li>
                     <li class="list-inline-item"><a class="novi-icon fa fa-google-plus" href="#"></a></li>
                     <li class="list-inline-item"><a class="novi-icon fa fa-youtube" href="#"></a></li>
                   </ul>
@@ -340,7 +340,7 @@
                   <div class="offset-top-50 text-sm-center text-xl-left">
                           <ul class="list-inline">
                             <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
-                            <li class="list-inline-item"><a class="novi-icon icon fa fa-twitter icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                            <li class="list-inline-item"><a class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                             <li class="list-inline-item"><a class="novi-icon icon fa fa-google-plus icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                             <li class="list-inline-item"><a class="novi-icon icon fa fa-linkedin icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
                           </ul>
