--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <div class="col-xl-8">
             </div>
           </div>
+          
           <div class="video-container">
             <div class="video-frame">
               <iframe 
@@ -267,7 +268,7 @@
       </section>
       <!-- Testimonials-->
       <section data-preset='{"title":"Testimonials","category":"content, testimonials, parallax","reload":true,"id":"testimonials"}'>
-        <div class="parallax-container" data-parallax-img="images/background-05-1920x850.jpg">
+        <div class="parallax-container" data-parallax-img="imgs-muscle/banner-footer.png">
           <div class="parallax-content">
             <div class="bg-overlay-gray-darkest context-dark">
               <div class="container section-98 section-md-110">
