--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!--Welcome-->
       <section class="section-98 section-md-110 novi-background" data-preset='{"title":"Content block 1","category":"content","id":"content-block-1"}'>
         <div class="container">
-          <h1 class="home">Boas Vindas</h1>
+          <h1 class="home">Boas Vindas  |  Muscle Factory</h1>
           <hr class="divider bg-red">
           <div class="row justify-content-sm-center offset-top-66">
             <div class="col-xl-8">
@@ -109,7 +109,7 @@
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-dumbbell"></span>
                 <h4 class="text-danger offset-top-20">Equipamentos</h4>
-                <p class="ambiente">"Conte com equipamentos de academia de alta qualidade para tornar seus treinos completos e eficientes. Nossas máquinas e acessórios são projetados para atender a todos os níveis de condicionamento físico, desde iniciantes até atletas avançados. Realize exercícios variados e otimize seu desempenho com segurança e conforto. <br><br> Nosso espaço é equipado para oferecer o suporte ideal ao seu progresso. Transforme seus objetivos em realidade com as melhores ferramentas para o seu treino!"</p>
+                <p class="ambiente">"Conte com equipamentos de academia de alta qualidade para tornar seus treinos completos e eficientes."</p>
               </div>
             </div>
           </div>
@@ -202,9 +202,9 @@
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
                         <ul class="list-inline list-inline-xs">
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-twitter icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-google-plus icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
                         </ul>
                       </div>
                     </div>
@@ -218,9 +218,9 @@
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
                         <ul class="list-inline list-inline-xs">
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-twitter icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-google-plus icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
                         </ul>
                       </div>
                     </div>
@@ -235,9 +235,9 @@
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
                         <ul class="list-inline list-inline-xs">
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-twitter icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-google-plus icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                            <li class="list-inline-item"><a class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
                         </ul>
                       </div>
                     </div>
@@ -252,9 +252,9 @@
                     <div class="box-member-caption">
                       <div class="box-member-caption-inner">
                         <ul class="list-inline list-inline-xs">
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-twitter icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
-                          <li class="list-inline-item"><a class="novi-icon icon fa fa-google-plus icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa-facebook icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa-instagram icon-xxs icon-circle icon-darkest-filled" href="#"></a></li>
+                          <li class="list-inline-item"><a class="novi-icon icon fa fa fa-whatsapp icon-xs icon-circle icon-darkest-filled" href="#"></a></li>
                         </ul>
                       </div>
                     </div>
