--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
                 allowfullscreen>
               </iframe>
             </div>
-            <article class="description">
-              <h2>Nosso Ambiente</h2>
-              <p class="ambiente">Espaço para descrição do ambiente e informações importantes</p>
+            <article class="description">        
+              <p class="ambiente">Academia espaçosa com 300 m², equipada com diversas máquinas para seu treino ser completo e eficiente.</p>
             </article>
           </div>
           <div class="row justify-content-center grid-group-lg offset-top-98">
