--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-sm icon-dark-filled mdi mdi-account-multiple"></span>
                 <h4 class="text-danger offset-top-20">Profissionais Qualificados</h4>
                 <p class="ambiente">
-                  "Encontre especialistas experientes e preparados para atender às suas necessidades com excelência."</p>
+                  "Encontre profissionais experientes e preparados para atender às suas necessidades com excelência."</p>
               </div>
             </div>
             <div class="col-md-8 col-lg-4">
               <!-- Icon Box Type 5-->
               <div class="box-icon box-icon-bordered"><span class="novi-icon icon icon-outlined icon-xs icon-dark-filled mdi mdi-thumb-up"></span>
                 <h4 class="text-danger offset-top-20">Ambiente</h4>
-                <p class="ambiente">Amplo Espaço e variedades de máquinas para o seu treino ficar completo <br><br> "Academia espaçosa com 300 m², equipada com diversas máquinas para seu treino ser completo e eficiente."</p>
+                <p class="ambiente">Amplo Espaço e variedades de máquinas para o seu treino ser completo.</p>
               </div>
             </div>
             <div class="col-md-8 col-lg-4">
