--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
             </div>
           </div>
         </div>
+      </section>
       <!-- Page Footer-->
       <footer class="section-relative section-top-66 section-bottom-34 page-footer bg-gray-base context-dark novi-background" data-preset='{"title":"Footer","category":"footer","reload":true,"id":"footer"}'>
         <div class="container">
@@ -321,7 +322,7 @@
                       Mantenha se atualizado com as novidades da Muscle Factory
                     </p>
                     <div class="offset-top-30">
-                            <form class="rd-mailform" data-form-output="form-subscribe-footer" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
+                            <form class="rd-mailform" data-form-output="form-subscribe-footer" data-form-type="subscribe" method="post" action="php/processar_registro.php">
                               <div class="form-group">
                                 <div class="input-group input-group-sm"><span class="input-group-prepend"><span class="input-group-text input-group-icon"><span class="mdi mdi-email novi-icon"></span></span></span>
                                   <input class="form-control" placeholder="Insira seu email" type="email" name="email" data-constraints="@Required @Email"><span class="input-group-append">
